# TicketGraph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml
.conductor/: settings.toml
docs/: agent-activity-ops.md  blog-rebuilding-temporal-on-postgres.md  context.md  distributed-programming-arc.md
docs/superpowers/specs/: 2026-06-10-ticketflow-design.md
scripts/: batch.py  doctor.py  reset.py  wait_for_api.py
src/ticketflow/: __init__.py  activities.py  agent_worker.py  api.py  clock.py  config.py  db.py  fallback_worker.py  graph.py  ledger.py  llm_worker.py  logging.py  models.py  readmodel.py  runner.py  side_effect_worker.py  signals.py  taskqueue.py  tracing.py  worker.py  workflows.py
src/ticketflow/agent/: base.py  mock.py
tests/: conftest.py  helpers.py  test_activities.py  test_agent_worker.py  test_api.py  test_batch_script.py  test_config.py  test_db.py  test_doctor_script.py  test_fallback_worker.py  test_graph.py  test_ledger.py  test_logging.py  test_mock_agent.py  test_models.py  test_postgres_fixture.py  test_readmodel.py  test_reset_script.py  test_runner.py  test_side_effect_worker.py  test_smoke_stack.py  test_smoke_tooling.py  test_taskqueue.py  test_tracing.py  test_tracing_stack.py  test_worker.py  test_workflow.py
