[project]
name = "ticketflow"
version = "0.1.0"
description = "Temporal.io learning project: durable support-ticket agent with human-in-the-loop approval"
requires-python = ">=3.12"
dependencies = [
    "temporalio[opentelemetry]>=1.11",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.2.2",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticketflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not smoke'"
markers = [
    "smoke: end-to-end tests against a running docker stack (make up)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D100", "D101", "D102", "D103", "D104", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"src/**/__init__.py" = ["D104"]

[tool.pyright]
include = ["src", "scripts", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
